roles/openshift_cluster_postinstall/templates/monitoring/prometheus-k8s-custom-route.yaml
# This route allows access to Prometheus web UI at:
# https://prometheus-k8s-custom-openshift-monitoring.apps.<cluster_domain>/graph
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prometheus-k8s-custom
  namespace: openshift-monitoring
spec:
  port:
    targetPort: web
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: prometheus-k8s
